general refactoring and implementation of basic authentication
